# software_development_utilities

./: commit_message_guidelines_for_quantum_ai_projects.md
mypyproj/: README.md  mypyproj.py  pyproject.toml
