[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "0.0.1"
description = "A minimal Python project."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Younes Javanmard" }
]

# Runtime deps (empty)
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "notebooks*"]
